HW1/javali_tests/HW1/SimpleTest.javali.s
  # Emitting class Main {...}
    # Emitting void main(...) {...}
main:
      # Emitting int a
      # Emitting a = 10
      # Emitting write(a)
        # Emitting a
        movl %edi, a
      sub $16, %esp
